<resources>
    <string name="app_name">Developers Life</string>

    <!-- Navigation panel -->
    <string name="logo_text">Developers life</string>
    <string name="logo_image_description">Application Logo</string>
    <string name="title_last">Last</string>
    <string name="title_best">Best</string>
    <string name="title_hot">Hot</string>
    <string name="title_random">Random</string>
    <string name="title_settings">Settings</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_offline">Offline</string>
    <string name="title_search">Search</string>
    <string name="open_in_browser_hint">Open in browser</string>
    <string name="open_settings_hint">Open settings</string>

    <!-- Toolbar -->
    <string name="subtitle_best_of_all">All time</string>
    <string name="subtitle_best_of_month">Monthly</string>
    <string name="subtitle_best_of_week">Weekly</string>
    <string name="subtitle_best_of_day">Daily</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dialog_close">Close</string>
    <string name="dialog_ok" translatable="false">OK</string>
    
    <string name="share_post_chooser">Share Post</string>
    <string name="share_image_chooser">Share image</string>
    <string name="no_browser_found">No application found to open web link. Try to install web browser.</string>
    <string name="no_app_to_share_link_found">No application found to share web link.</string>

    <!-- transitions -->
    <string name="transition_name_description" translatable="false">description_transition</string>
    <string name="transition_name_author" translatable="false">author_transition</string>
    <string name="transition_name_rating" translatable="false">rating_transition</string>
    <string name="transition_name_image" translatable="false">image_transition</string>

    <!-- Details screen -->
    <string name="activity_details_cannot_show_link">For now \'%s\' application cannot show this web link.</string>
    <string name="activity_gif_viewer_cannot_open_link">\'%s\' application cannot open this file or link.</string>
    <string name="activity_details_show_alternative_apps">Alternatively you can open link with:</string>
    <string name="activity_details_nothing_to_show">Nothing to show</string>
    <string name="btn_share_image_link_hint">Share image link</string>
    <string name="btn_share_image_hint">Share image</string>
    <string name="btn_save_image_hint">Save image</string>
    <string name="btn_share_post_hint">Share post</string>
    <string name="btn_share_post_link_hint">Share post link</string>
    <string name="btn_details_hint">Detailed view</string>
    <string name="post_item_author">Author: %s</string>
    <string name="post_item_rating">Rating: %s&#160;&#160;</string>
    <string name="post_item_date">Date: %s</string>
    <string name="details_menu_share_post">Share post</string>
    <string name="details_menu_open_in_browser">Open in browser</string>
    <string name="details_menu_share_image">Share image</string>
    <string name="expand_text_hint">Expand image description</string>
    <string name="fragment_post_list_no_data">No Data Found</string>
    <string name="gif_viewer_fail_to_load_gif">Failed to load GIF image</string>
    <string name="post_list_loading_footer_loading">Loading…</string>
    <string name="post_list_loading_footer_failed">Loading Failed</string>
    <string name="details_activity_name">Details</string>
    <string name="no_app_to_share_gif_found">No application found to share gif image.</string>
    <string name="image_is_success_saved">Image is saved to:\n%s</string>
    <string name="failed_to_save_image">Failed to save image</string>
    <string name="save_file_file_name" translatable="false">%s.gif</string>
    <string name="save_file_start_downloading">File wasn\'t found in cache, downloading…</string>
    <string name="share_image_failed">Cannot share image because image file wasn\'t found in cache.</string>
    <string name="main_menu_search_request_too_short">Search text should have at least 2 symbols</string>
    <string name="toolbar_search_field_hint">Search…</string>
    <string name="toolbar_search_clear_search_hint">Clear search field</string>
    <string name="btn_bookmarks_hint">Add/Remove Bookmark</string>
    <string name="action_auto_load_images">Auto load gif images</string>
    <string name="auto_load_gifs_confirm_enable_btn">Confirm</string>
    <string name="auto_load_gifs_cancel_enable_btn">Cancel</string>
    <string name="auto_load_gifs_warning">Automatic gif images loading may cause performance issues. \nDo You really want to enable it?</string>
    <string name="title_favorites">Favorite GIFs</string>
    <string name="post_list_footer_try_again">Try again</string>
    <string name="favorites_empty_view_text_first_part">Press</string>
    <string name="favorites_empty_view_text_last_part">" \nto add gifs to favorites"</string>
    <string name="favorites_undo_deletion_label">UNDO</string>
    <string name="favorites_success_deletion_msg">Successfully deleted</string>
    <string name="favorites_success_restoration_msg">Restored</string>
    <string name="favorites_failed_restoration_msg">Failed to restore deleted gifs</string>
    <string name="favorites_failed_deletion_msg">Failed to delete selected gifs from favorites</string>
    <string name="details_loading_comments_text">Loading comments...</string>
    <string name="details_no_comments_text">No comments</string>
    <string name="no_permission_to_save_file_dialog_title">Unable to save file</string>
    <string name="no_permission_to_save_file_dialog_msg">Permissions to save files to device storage wasn\'t granted for this application. To grant permissions go to application permissions settings screen and allow storage permissions</string>
    <string name="no_permission_to_save_file_dialog_ok_btn">Go to settings</string>
    <string name="no_permission_to_save_file_dialog_cancel_btn">Cancel</string>
    <plurals name="details_n_comments_text">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
</resources>
