<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/details_menu_bookmark_post"
        android:icon="@drawable/ic_bookmark_white_36dp"
        android:title="@string/btn_bookmarks_hint"
        android:checked="false"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/details_menu_share_post_link"
        android:icon="@drawable/ic_link_white_24dp"
        android:title="@string/btn_share_post_link_hint"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/details_menu_share_post"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/btn_share_post_hint"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/details_menu_open_in_browser"
        android:icon="@drawable/ic_open_in_browser_white_24dp"
        android:title="@string/details_menu_open_in_browser"
        app:showAsAction="ifRoom"/>
</menu>