<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/fragment_post_list_height"
    android:minHeight="@dimen/fragment_post_list_height"
    android:layout_gravity="center"
    card_view:cardCornerRadius="10dp"
    card_view:elevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/post_layout_padding"
        android:orientation="vertical">

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            layout="@layout/layout_text_expandable" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            tools:showIn="@layout/item_view_post">

            <include
                layout="@layout/layout_image_and_controls" />
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/btn_share_post_link"
                android:layout_toStartOf="@+id/btn_share_post_link"
                android:singleLine="true"
                android:lines="1"
                android:ellipsize="end"
                android:transitionName="@string/transition_name_author"
                style="@style/CommonText"
                tools:text="Author: marchelo" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:singleLine="true"
                android:lines="1"
                android:ellipsize="end"
                tools:drawableRight="@drawable/ic_favorite_black_18dp"
                android:layout_below="@id/tv_author"
                android:transitionName="@string/transition_name_rating"
                style="@style/CommonText"
                tools:text="Rating: 7" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/btn_share_post_link"
                android:layout_toStartOf="@+id/btn_share_post_link"
                android:layout_below="@id/tv_rating"
                android:visibility="gone"
                style="@style/CommonText"
                tools:text="Date: 21.03.2015" />

            <ImageButton
                android:id="@+id/btn_share_post_link"
                style="@style/PostActionButton"
                android:layout_width="@dimen/post_action_button_width"
                android:layout_height="@dimen/post_action_button_height"
                android:layout_marginEnd="-3dp"
                android:layout_marginRight="-3dp"
                android:layout_toLeftOf="@+id/btn_share_post"
                android:layout_toStartOf="@+id/btn_share_post"
                android:background="@drawable/post_toolbar_bg_left"
                android:contentDescription="@string/btn_share_post_hint"
                android:src="@drawable/ic_link_black_24dp"
                tools:ignore="UnusedAttribute" />

            <ImageButton
                android:id="@+id/btn_share_post"
                style="@style/PostActionButton"
                android:layout_width="@dimen/post_action_button_width"
                android:layout_height="@dimen/post_action_button_height"
                android:layout_marginEnd="-3dp"
                android:layout_marginRight="-3dp"
                android:layout_toLeftOf="@+id/btn_details"
                android:layout_toStartOf="@+id/btn_details"
                android:background="@drawable/post_toolbar_bg_middle"
                android:contentDescription="@string/btn_share_post_hint"
                android:src="@drawable/ic_share_black_24dp"
                android:visibility="gone"
                tools:ignore="UnusedAttribute" />

            <ImageButton
                android:id="@+id/btn_details"
                style="@style/PostActionButton"
                android:layout_width="@dimen/post_action_button_width"
                android:layout_height="@dimen/post_action_button_height"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/post_toolbar_bg_right"
                android:contentDescription="@string/btn_details_hint"
                android:src="@drawable/ic_open_in_new_black_24dp"
                tools:ignore="UnusedAttribute"/>
        </RelativeLayout>
    </LinearLayout>

    <CheckBox
        android:id="@+id/btn_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="7dp"
        android:paddingStart="7dp"
        android:paddingBottom="7dp"
        android:layout_marginRight="-10dp"
        android:layout_marginEnd="-10dp"
        android:button="@drawable/ic_bookmark_selector"
        android:layout_gravity="end|top"
        android:background="@android:color/transparent"
        android:contentDescription="@string/btn_bookmarks_hint"
        tools:ignore="RtlSymmetry" />
</android.support.v7.widget.CardView>