<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="@layout/item_view_post">

    <pl.droidsonroids.gif.GifImageButton
        android:id="@+id/gif_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:background="@android:color/black"
        android:padding="2dp"
        android:scaleType="fitCenter"
        android:transitionName="@string/transition_name_image"
        tools:src="@drawable/sample_1" />

    <CheckBox
        android:id="@+id/btn_play_pause"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:alpha="0.5"
        android:button="@android:color/transparent"
        android:background="@drawable/play_pause_selector" />

    <com.marchelo.developerslite.view.ProgressBarTint
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:padding="0dp"
        android:layout_marginTop="-8dp"
        android:layout_marginLeft="-5dp"
        android:layout_marginRight="-5dp"
        android:progressDrawable="@drawable/progress_drawable"
        app:colorTint="@color/colorPrimaryDark"
        style="?android:attr/progressBarStyleHorizontal"/>

    <com.marchelo.developerslite.view.ImageShareToolbar
        android:id="@+id/btn_image_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="end|top"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_save_gif_link"
            android:layout_width="@dimen/post_share_button_size"
            android:layout_height="@dimen/post_share_button_size"
            android:layout_margin="2dp"
            android:src="@drawable/ic_favorite_white_selector"
            android:background="@drawable/share_white_button_bg"
            android:contentDescription="@string/btn_share_post_hint"
            style="@style/PostActionButton"
            tools:ignore="UnusedAttribute" />

        <ImageButton
            android:id="@+id/btn_share_image_link"
            android:layout_width="@dimen/post_share_button_size"
            android:layout_height="@dimen/post_share_button_size"
            android:layout_margin="2dp"
            android:src="@drawable/ic_link_white_24dp"
            android:background="@drawable/share_white_button_bg"
            android:contentDescription="@string/btn_share_post_hint"
            style="@style/PostActionButton"
            tools:ignore="UnusedAttribute"/>

        <ImageButton
            android:id="@+id/btn_share_image"
            android:layout_width="@dimen/post_share_button_size"
            android:layout_height="@dimen/post_share_button_size"
            android:layout_margin="2dp"
            android:src="@drawable/ic_share_white_24dp"
            android:background="@drawable/share_white_button_bg"
            android:contentDescription="@string/btn_share_post_hint"
            style="@style/PostActionButton"
            tools:ignore="UnusedAttribute"
            tools:visibility="visible"/>

        <ImageButton
            android:id="@+id/btn_save_image"
            android:layout_width="@dimen/post_share_button_size"
            android:layout_height="@dimen/post_share_button_size"
            android:layout_margin="2dp"
            android:src="@drawable/ic_file_download_white_24dp"
            android:background="@drawable/share_white_button_bg"
            android:contentDescription="@string/btn_share_post_hint"
            style="@style/PostActionButton"
            tools:ignore="UnusedAttribute"
            tools:visibility="visible"/>
    </com.marchelo.developerslite.view.ImageShareToolbar>

    <TextView
        android:id="@+id/view_load_fail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLargeInverse"
        android:text="@string/gif_viewer_fail_to_load_gif"
        android:visibility="gone"
        tools:visibility="visible"/>
</merge>